<resources>
    <string name="app_name">KanjiDamage</string>
    <string name="search">Search</string>
    <string name="kanjidamage">KanjiDamage</string>
    <string name="onyomi">Onyomi</string>
    <string name="mnemonic">Mnemonic</string>
    <string name="kunyomi">Kunyomi</string>
    <string name="jisho">Jisho.org</string>
    <string name="copy">Copy</string>
    <string name="used_in">Used in</string>
    <string name="kanjistudy">Kanji Study</string>
    <string name="about">About</string>
    <string name="kd_credits">KanjiDamage method</string>
    <string name="kd_url">http://KanjiDamage.com</string>
    <string name="author_credits">App developer</string>
    <string name="author_url">https://github.com/jhspetersson/KanjiDamageApp</string>
    <string name="lookalikes">Lookalikes</string>
    <string name="loading">Loading…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_search">Search</string>
    <string name="menu_kanji_list">Kanji List</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_kanjidamage">KanjiDamage</string>
    <string name="menu_author">GitHub</string>

    <string name="under_construction">Under construction…</string>
    <string name="go_to">Go to…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
