<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_kanji"
            android:icon="@drawable/ic_action_kanji_list"
            android:title="@string/menu_kanji_list" />
    </group>

    <item android:title="@string/go_to">
        <menu>
            <item
                android:id="@+id/nav_kanjidamage"
                android:icon="@drawable/ic_action_kanjidamage"
                android:title="@string/menu_kanjidamage" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_action_github"
                android:title="@string/menu_author" />
        </menu>
    </item>

</menu>
