<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kd_credits"
        android:textAlignment="center"
        style="@style/label"
        />

    <TextView
        android:id="@+id/kd_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kd_url"
        android:textAlignment="center"
        style="@style/link"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/label"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_credits"
        android:textAlignment="center"
        style="@style/label"
        />

    <TextView
        android:id="@+id/author_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_url"
        android:textAlignment="center"
        style="@style/link"
        />
</LinearLayout>